deployment to heroku

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,14 @@
         {% endif %}
     </head>
     <body>
-
+        <body>
+            <!-- Popular movie section  -->
+            <h3> API News</h3>
+             <ul>
+                {% for business in articles %}
+                    <li>{{ business.title}}</li>
+                {% endfor %}
+            </ul>
+     </body>
     </body>
 </html>
