--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,4 @@
+{% import 'macros.html' as macro%}
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,39 +11,14 @@
     </head>
     <body>
         <body>
-            <!-- Popular movie section  -->
             <h1>TOP NEWS</h1>
-            <!-- <h1>BBC-NEWS</h1>
-             <ul>
-                {% for articles in bbcnews %}
-                <li><a href={{articles.url}}></a></li>
-                <br>
-                <li>{{ articles.content}}</li>
-                <hr>
-                {% endfor %}
-            </ul> -->
             <h1>ABC-NEWS</h1>
             <ul>
-               {% for articles in abcnews %}
-               <li><a href="{{articles.url">{{articles.title}}</a></li>
-               <li><img src="{{ articles.urlToImage}}" alt=""></li>
-               <br>
-               <li>{{ articles.description}}</li>
-               <br>
-               <p>Published on:</p>
-               <li>{{ articles.publishedAt}}</li>
-               <hr>
-
-               {% endfor %}
+                {{ macro.displayArticleList(abcnews)}}
            </ul>
            <h1>ANSA NEWS</h1>
            <ul>
-              {% for articles in ansa %}
-              <li>{{ articles.url}}</li>
-              <br>
-              <li>{{ articles.content}}</li>
-              <hr>
-              {% endfor %}
+           
           </ul>
      </body>
     </body>
