--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    {% if title %}
-    <title> {{ title }}</title>
-    {% else %}
-    <title> NEWS API </title>
-    {% endif %}
-</head>
-
-<body>
-   
-</body>
-
-</html>
+{% extends 'bootstrap/base.html'%}
