add initial files

--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    {% for article in  %} 
+    {% for article in bbc-news %} 
     <div class="card" style="width: 18rem;">
         <img src="{{urlToImage}}" class="card-img-top" alt="...">
         <div class="card-body">
