--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,7 +3,7 @@
 <div class="container">
 <div class="row">
     {% for sources in source_list %}    
-       <a href="https://newsapi.org/v2/top-headlines?sources={{sources.id}}&apiKey=19c17f3cfb5147fa83278f289e8d50dc">{{ sources.name}}</a> 
+       <a href="./article.html/{{sources.id}}">{{ sources.name}}</a> 
         <br>  
     {% endfor %}
 </div>
