--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -2,15 +2,10 @@
 
 {% block content %}
 <div class="container">
-    {% for article in bbc-news %} 
-    <div class="card" style="width: 18rem;">
-        <img src="{{urlToImage}}" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{ article.title }}</h5>
-          <p class="card-text">{{ article.description}}</p>
-          <a href="#" class="btn btn-primary">{{ article.publishedAt }}</a>
-        </div>
-    </div>
-    {% endfor %}
+  <p>
+    {% for article in articles %} 
+      <p>{{article.author}}</p>
+    {% endfor %} 
+  </p>
 </div>
 {% endblock %}
