--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,9 +1,9 @@
 {% macro displaySourceList(source_list) %}
 
 <div class="container">
-<div class="row">
+<div class="row bg-light text-center">
     {% for sources in source_list %}    
-       <a href="{{ url_for('/article') }}">{{ sources.name}}</a> 
+       <a href="{{ url_for('main.article') }}">{{ sources.name}}</a> 
         <br>  
     {% endfor %}
 </div>
